--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
+  "scripts": {
+    "dev": "serverless offline start",
+    "start": "serverless deploy --verbose"
+  },
   "name": "scoops-test",
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "dynamoose": "^3.2.1",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   },
   "devDependencies": {
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^13.2.0",
     "standard": "^17.1.0"
   },
   "eslintConfig": {
