--- a/serverless.yml
+++ b/serverless.yml
@@ -43,3 +43,7 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:custom.tableName}
+
+plugins:
+  - serverless-offline
+  - serverless-dynamodb-local
