--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
     "dev": "serverless offline start",
     "deploy:prod": "rm -rf node_modules && npm install --production && serverless deploy",
     "deploy": "serverless deploy"
-
   },
   "name": "scoops-test",
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "dynamoose": "^3.2.1",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^13.2.0",
     "standard": "^17.1.0"
