--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.20.2",
     "dynamoose": "^3.2.1",
     "express": "^4.18.2",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "serverless-scriptable-plugin": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
