--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dynamoose": "^3.2.1",
     "express": "^4.18.2",
