--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "serverless offline start",
     "deploy:prod": "rm -rf node_modules && npm install --production && serverless deploy",
-    "deploy": "serverless deploy"
+    "deploy": "serverless deploy",
+    "test": "mocha --timeout 10000 --recursive test/**/*.js"
   },
   "name": "scoops-test",
   "version": "1.0.0",
@@ -14,14 +15,17 @@
     "dynamoose": "^3.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "serverless-http": "^3.1.1",
-    "serverless-scriptable-plugin": "^1.3.1"
+    "serverless-http": "^3.1.1"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^13.2.0",
-    "standard": "^17.1.0"
+    "sinon": "^16.1.0",
+    "standard": "^17.1.0",
+    "supertest": "^6.3.3"
   },
   "eslintConfig": {
     "extends": [
@@ -32,6 +36,9 @@
         "error",
         4
       ]
+    },
+    "env": {
+      "mocha": true
     }
   }
 }
