--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "serverless offline start",
+    "pre": "swagger-cli bundle -r swagger/swagger.json -o swagger/mainSwagger.json",
     "deploy:prod": "rm -rf node_modules && npm install --production && serverless deploy",
     "deploy": "serverless deploy",
     "test": "mocha --timeout 10000 --recursive test/**/*.js"
@@ -10,12 +11,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.5.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dynamoose": "^3.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "serverless-scriptable-plugin": "^1.3.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.10",
