Added comment in file serverless.yml for uncomment last lines of code for local environment

--- a/serverless.yml
+++ b/serverless.yml
@@ -97,3 +97,6 @@ resources:
 
 plugins:
   - serverless-scriptable-plugin
+  # Uncomment for local environment and install devDependencies
+  # - serverless-offline
+  # - serverless-dynamodb-local
