--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "name": "scoops-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "API with Serverless Framework and AWS",
+  "author": "Edson Anawaya Rios - edsonrios9@gmail.com",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
